# hackvr-turbo

./: .gitmodules  README.md  SPEC.md  SPEC_NOTES.md  SPEC_TODO.md  build.zig
data/: dungeon.hackvr
docs/: auth-workflow.dot
hackvr-client-py/: AGENTS.md  README.md  pyproject.toml  requirements.txt
hackvr-client-py/src/hackvr_client_py/: __init__.py  cli.py  client.py
hackvr-client-py/tests/: test_cube.py
hackvr-py/: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml  requirements.txt
hackvr-py/scripts/: manual_net_test.py
hackvr-py/src/hackvr/: __init__.py  base.py  client.py  net.py  server.py
hackvr-py/src/hackvr/common/: __init__.py  encoding.py  globbing.py  stream.py  types.py
hackvr-py/src/hackvr/tools/: __init__.py  keygen.py  playback_server.py
hackvr-py/tests/: test_base.py  test_client.py  test_encoding.py  test_globbing.py  test_keygen.py  test_net.py  test_playback_server.py  test_protocols.py  test_remote.py  test_server.py  test_stream.py  test_types.py
hackvr-py/tests/fixtures/: playback.json
hackvr-py/tests/fuzzing/: fuzz_common_globbing.py  fuzz_common_stream.py  fuzz_common_types.py
hackvr-py/tests/properties/: test_common_properties.py
lib/: fixed_list.zig
lib/hackvr/: lib.zig  parser.zig
lib/hackvr/data/: minimal.hackvr
notes/: chatlog.txt
src/: main.zig
src/shader/: flat.frag  flat.vert
