[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackvr-py"
version = "0.1.0"
description = "HackVR protocol helpers"
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "ISC"]

[tool.ruff.lint.flake8-implicit-str-concat]
allow-multiline = false

[tool.ty.environment]
python = "/root/.pyenv/versions/3.12.12/bin/python"
python-version = "3.12"
extra-paths = ["/root/.pyenv/versions/3.12.12/lib/python3.12/site-packages"]
